add loading tasks from localstorage and style changes

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
         text-align: center;
         font-size: 12px;
         right:0;
-        top: 50%;
+        top: 45%;
         transform: translateY(-50%); 
 
     }
@@ -106,7 +106,11 @@
         display: inline;
         border: none;
         padding: 5px 10px;
-        width: 400px;
+        width: 330px;
+    }
+    .description-container{
+        word-break: break-word;
+        font-size: 14px;
     }
     .description-container::before{
         content: "Description: ";
